--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,27 +1,20 @@
 {
   "env": {
-    "browser": true,
-    "es2021": true
+      "es2020": true,
+      "node": true,
+      "jest": true
   },
-  "root": true,
-  "parser": "@typescript-eslint/parser",
   "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended",
-    "prettier/@typescript-eslint",
-    "plugin:prettier/recommended"
+      "standard"
   ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
+      "ecmaVersion": 11,
+      "sourceType": "module"
   },
   "plugins": [
-    "@typescript-eslint",
-    "prettier"
+      "@typescript-eslint"
   ],
   "rules": {
-    "no-console": "warn",
-    "prettier/prettier": "error"
   }
 }
